Add Git LFS configuration

--- a/image-classification/.gitattributes
+++ b/image-classification/.gitattributes
@@ -1,1 +1,4 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
+models/fine_tuned_resnet/**/* filter=lfs diff=lfs merge=lfs -text
