--- a/image-classification/.gitattributes
+++ b/image-classification/.gitattributes
@@ -2,3 +2,4 @@
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 models/fine_tuned_resnet/**/* filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
