--- a/website_blocker/manifest.json
+++ b/website_blocker/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Website Blocker",
+  "name": "Shower Break",
   "version": "1.0",
-  "description": "Blocks specified websites.",
+  "description": "Blocks programming related websites until you shower for the day.",
   "permissions": ["declarativeNetRequest", "storage", "scripting"],
   "host_permissions": ["<all_urls>"],
   "background": {
