--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,9 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+*.png
 blocker-venv*
-
+.env*
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
