--- a/website_blocker/manifest.json
+++ b/website_blocker/manifest.json
@@ -21,7 +21,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [],
+      "js": ["popup.js"],
       "run_at": "document_start"
     }
   ],
